# video_dwn_test

./: .gitignore  docker-compose.yml  main.py  main_web.py  mainwsm.js  pyproject.toml  tests.py
src/core/: async_queue.py  link_parser.py  master_service.py  rabbitmq.py  redis_client.py  result.py  uploader.py  ydl.py
src/exceptions/: base_exception.py  download_exceptions.py
src/parsers/: base_parser.py  parser_mapping.py
src/parsers/Bing/: bing_parser.py
src/parsers/Dzen/: dzen_parser.py
src/parsers/MyMail/: my_mail_parser.py
src/parsers/Okru/: ok_parser.py
src/parsers/Telegram/telegram_media_downloader/: .gitignore  README_CN.md  config.yaml  media_downloader.py  telegram_parser.py
src/parsers/Telegram/telegram_media_downloader/module/: app.py  bot.py  cloud_drive.py
src/parsers/Telegram/telegram_media_downloader/tests/: test_media_downloader.py
src/parsers/Telegram/telegram_media_downloader/tests/module/: test_app.py
src/parsers/Yahoo/: yahoo_parser.py
src/parsers/Yappy/: yappy_parser.py
src/web/: main.py
src/web/schemes/: submit.py
src/web/templates/: index.html
